# stm32-device-signature

./: .travis.yml  Cargo.toml  README.md  build.rs
ci/: script.sh
src/: lib.rs
