[package]
name = "stm32-device-signature"
version = "0.2.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Device electronic signature 'driver' for STM32 microcontrollers"
keywords = ["arm", "stm32"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/stm32-rs/stm32-device-signature"
edition = "2018"

[dependencies]
cortex-m = "0.6.2"

[package.metadata.docs.rs]
features = ["stm32f1"]

[features]
stm32f0 = []
stm32f1 = []
stm32f3 = []
stm32f4 = []
stm32g0 = []
stm32l0 = []
stm32l4 = []
stm32wb5x = []
